# odoo_test_loop

./: LICENSE.txt  README.md  pyproject.toml
src/odoo_test_loop/: __about__.py  cli.py
tests/: __init__.py
