[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-test-loop"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Michael Dahl", email = "michael@dahl.software" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["odoo", "typer", "watchdog"]

[project.urls]
Documentation = "https://github.com/micdahl/odoo-test-loop#readme"
Issues = "https://github.com/micdahl/odoo-test-loop/issues"
Source = "https://github.com/micdahl/odoo-test-loop"

[project.scripts]
odoo_test_loop = "odoo_test_loop.cli:main"

[tool.hatch.version]
path = "src/odoo_test_loop/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "typer"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/odoo_test_loop tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_test_loop"]

[tool.coverage.run]
source_pkgs = ["odoo_test_loop", "tests"]
branch = true
parallel = true
omit = [
  "src/odoo_test_loop/__about__.py",
]

[tool.coverage.paths]
modoole_test = ["src/odoo_test_loop", "*/odoo_test_loop/src/odoo_test_loop"]
tests = ["tests", "*/odoo_test_loop/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
